--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+
 .body {
   display: flex;
   flex-direction: column;
@@ -261,3 +272,4 @@ span:nth-child(10){
   z-index: 2; /* Pastikan ini di atas background animasi */
   margin-bottom: 10%;
 }
+
